# milvus-cortex

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
benchmarks/longmemeval/: README.md  run_benchmark.py
benchmarks/longmemeval/results/: benchmark_log.txt  benchmark_results.jsonl
examples/: hybrid_demo.py  quickstart.py
integrations/memsearch/: README.md  docker-compose.yml  pyproject.toml
integrations/memsearch/demo/: demo_agent_loop.py
integrations/memsearch/demo/sample_memories/: conversations.md  preferences.md  projects.md
integrations/memsearch/memsearch/: cli.py  config.py  core.py  cortex_bridge.py  store.py
integrations/memsearch/tests/: conftest.py  test_cortex_bridge.py  test_cortex_store.py
src/milvus_cortex/: __init__.py  config.py  models.py  observability.py  runtime.py
src/milvus_cortex/embedding/: __init__.py  base.py  fake.py  http.py  openai.py  sparse.py
src/milvus_cortex/extraction/: __init__.py  base.py  llm.py
src/milvus_cortex/graph/: __init__.py  engine.py
src/milvus_cortex/lifecycle/: __init__.py  manager.py
src/milvus_cortex/retrieval/: __init__.py  orchestrator.py  reranker.py
src/milvus_cortex/storage/: __init__.py  base.py  milvus.py
tests/: conftest.py  test_consolidation.py  test_embedding.py  test_graph.py  test_hybrid_search.py  test_lifecycle.py  test_models.py  test_multi_vector.py  test_observability.py  test_runtime.py
