[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "milvus-cortex"
version = "0.1.0"
description = "Milvus-native memory runtime for agent systems"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pymilvus>=2.5.0",
    "milvus-lite>=2.4.0",
    "pydantic>=2.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
rerank = [
    "sentence-transformers>=2.0",
]
tiktoken = [
    "tiktoken>=0.5",
]
all = [
    "sentence-transformers>=2.0",
    "tiktoken>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/milvus_cortex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
